2021-06-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Introduce quiet mode, remove extension guessing.

	With so many supported font formats, it does not make sense to guess
	the `ttf' or `ttc' extensions.

	* src/ftlint.c (main): Add `-q' option and improve output formatting;
	remove extension guessing.
	(Usage): Document it.

2021-06-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (Print_Glyfs, Print_Programs): Handle empty glyphs.

2021-06-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftlint] Report integral X- and Y-acutance.

	Acutance is a measure of how quickly the intensity changes between
	the minimum and maximum value at the edges.  We calculate is as a
	ratio of the integrals for the absolute second derivative and the
	absolute first derivative.  It equals to 2.0 for bitmap fonts and
	approaches this value for well-hinted fonts.

	* src/ftlint.c (Analyze): Implement it.
	(main): Use it.

2021-06-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main): Report bitmap size, improve output formatting.
	(Checksum): Updated.

2021-06-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftlint.c (main): Implement limited indexing.
	(Usage): Document it.

2021-06-13  Sarthak Bhardwaj  <1sarthakbhardwaj@gmail.com>
            Anurag Thakur  <devanuragthakur@gmail.com>

	[ftlint] Render and calculate MD5 checksum.

	* src/ftlint.c (main): Handle the load flags and the render mode from
	the command line.
	(Checksum): Calculate MD5 sum.
	* src/md5.c, src/md5.h: MD5 source code.
	* Makefile, messon.build: Update the build systems.

2021-06-06  Anuj Verma  <anujv@iitbhilai.ac.in>

	[ftsdf] Synchronize with the change made in the `sdf` renderer.

	* src/ftsdf.c (draw): Change logic to utilize 8bit SDF instead of 16.

2021-06-04  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_dump_stats): Fix the lookup rate.

2021-06-02  Alexei Podtelezhnikov  <apodtele@gmail.com>
